[gd_scene load_steps=10 format=3 uid="uid://b5odb8lr5oaw0"]

[ext_resource type="Script" path="res://Scripts/Bomber.gd" id="1_lv2yi"]
[ext_resource type="Texture2D" uid="uid://ctxndurm5hqnr" path="res://Art/Bomber1.png" id="2_oeeh3"]
[ext_resource type="Texture2D" uid="uid://bpcikbbou8mri" path="res://Art/blastzone.png" id="3_7l5lq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yy4no"]
size = Vector2(10, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_7r4md"]

[sub_resource type="Animation" id="Animation_x37rf"]
resource_name = "Chasing"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0.968627, 1)]
}

[sub_resource type="Animation" id="Animation_3hajq"]
resource_name = "Detonating"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blastArea/BlastShape:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 1000.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:dead")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blastArea/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blastArea/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(8.1, 8.1)]
}

[sub_resource type="Animation" id="Animation_b0vlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blastArea/BlastShape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:dead")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blastArea/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blastArea/Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qn85e"]
_data = {
"Chasing": SubResource("Animation_x37rf"),
"Detonating": SubResource("Animation_3hajq"),
"RESET": SubResource("Animation_b0vlu")
}

[node name="Bomber" type="CharacterBody2D" groups=["Enemy"]]
texture_filter = 1
motion_mode = 1
safe_margin = 10.0
script = ExtResource("1_lv2yi")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
texture = ExtResource("2_oeeh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("RectangleShape2D_yy4no")

[node name="blastArea" type="Area2D" parent="."]

[node name="BlastShape" type="CollisionShape2D" parent="blastArea"]
shape = SubResource("CircleShape2D_7r4md")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="blastArea"]
visible = false
texture_filter = 1
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_7l5lq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qn85e")
}

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
